--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,16 @@
 language: node_js
-node_js: 
-  "stable"
-cache: 
+node_js:
+  - "stable"
+cache:
   directories:
-    "node_modules"
+    - node_modules
 script:
   - npm test
   - npm run build
 deploy:
   provider: surge
   skip_cleanup: true
-  domain: theodericfirstproject.surge.sh
+  domain: theoderic.surge.sh
   project: ./build/
-on: 
+on:
   branch: master
